refactoring: pages with layout

--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
-
+<html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/layout/layout}" th:with="title='Home'" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta th:insert="~{/fragments/custom-headfiles :: list-headfiles(title='Usuários')}">
     <title>Gerenciamento de Usuários</title>
 </head>
-
 <body>
-<header th:replace="~{/fragments/header}"></header>
-<main>
+<main layout:fragment="content">
     <div class="container">
         <h1>Gerenciamento de Usuários</h1>
 
