--- a/src/main/resources/templates/candidatures/list.html
+++ b/src/main/resources/templates/candidatures/list.html
@@ -1,16 +1,9 @@
-<!doctype html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
-
+<html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/layout/layout}" th:with="title='Home'" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-
     <meta th:insert="~{/fragments/custom-headfiles :: list-headfiles(title='Candidaturas')}">
-
 </head>
-
 <body>
-    <header th:replace="~{/fragments/header}"></header>
-    <main class="main-screen">
-
+    <main class="main-screen" layout:fragment="content">
         <div class="card-list-component">
             <h1>Candidaturas</h1>
             <div class="buttons-actions">
@@ -23,10 +16,7 @@
                 </div>
 
             </div>
-
+        </div>
     </main>
-    <div th:replace="~{/fragments/scripts}"></div>
-
 </body>
-
 </html>
