--- a/src/main/resources/templates/offers/list.html
+++ b/src/main/resources/templates/offers/list.html
@@ -1,17 +1,10 @@
-<!doctype html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
-
+<html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/layout/layout}" th:with="title='Home'" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-
     <meta th:insert="~{/fragments/custom-headfiles :: list-headfiles(title='Ofertas')}">
-
 </head>
 
 <body>
-    <header th:replace="~{/fragments/header}"></header>
-    <main class="main-screen">
-
-
+    <main class="main-screen" layout:fragment="content">
         <div class="card-list-component">
             <h1>Ofertas de Estágio</h1>
             <div class="buttons-actions">
@@ -28,11 +21,7 @@
             <th:block th:each="offer : ${offers}" th:insert="~{/offers/fragments/card(offer)}">
             </th:block>
         </div>
-
-
     </main>
-    <div th:replace="~{/fragments/scripts}"></div>
-
 </body>
 
 </html>
