--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt_BR" xmlns:th="http://www.thymeleaf.org">
-
+<html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/layout/layout}" th:with="title='Home'" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +7,7 @@
 </head>
 
 <body >
-<header th:replace="~{/fragments/header}"></header>
-<main class="main-screen">
+<main class="main-screen" layout:fragment="content">
     <div class="card-main">
         <div class="main-content">
             <h1 class="form-title">Login</h1>
@@ -47,7 +44,6 @@
             </form>
         </div>
     </div>
-    <div th:replace="~{/fragments/scripts}"></div>
 </main>
 </body>
 
