--- a/src/main/resources/templates/companies/list.html
+++ b/src/main/resources/templates/companies/list.html
@@ -1,16 +1,10 @@
-<!doctype html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
-
+<html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/layout/layout}" th:with="title='Home'" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <link rel="stylesheet" type="text/css" th:href="@{/styles/list.css}" />
     <meta th:insert="~{/fragments/custom-headfiles :: list-headfiles(title='Empresas')}">
-
 </head>
-
 <body>
-
-    <header th:replace="~{/fragments/header}"> </header>
-    <main class="main-screen">
+    <main class="main-screen" layout:fragment="content">
 
         <div class="card-list-component">
             <h1> Empresas Cadastradas</h1>
@@ -27,9 +21,6 @@
             <div class="father-card">
                 <th:block th:each="company :${companies}" th:insert="~{/companies/fragments/card(company = ${company})}">
                 </th:block>
-            </div>
-
-            <div th:replace="~{/fragments/scripts}">
             </div>
         </div>
     </main>
