--- a/src/main/resources/templates/offers/info.html
+++ b/src/main/resources/templates/offers/info.html
@@ -1,21 +1,12 @@
-<!doctype html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
-
+<html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/layout/layout}" th:with="title='Home'" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <!-- Incluindo o fragmento de cabeçalho -->
     <meta th:insert="~{/fragments/custom-headfiles :: perfil-headfiles(title=${offer.principalActivity})}">
     <link rel="stylesheet" th:href="@{/styles/fragments/table-global.css}">
     <link rel="stylesheet" th:href="@{/styles/offers/info.css}">
-
 </head>
 
 <body>
-    <!-- Cabeçalho -->
-    <header th:replace="~{/fragments/header}"></header>
-
-    <!-- Conteúdo principal -->
-    <main class="main-content">
-        <!-- Seção de detalhes da oportunidade -->
+    <main class="main-content" layout:fragment="content">
         <div class="info-section details">
             <h1 class="section-title">Detalhes</h1>
             <!-- Remuneração -->
@@ -103,9 +94,6 @@
 
         </div>
     </main>
-
-    <div th:replace="~{/fragments/scripts}"></div>
-
 </body>
 
 </html>
