criado a lógica para exclusão e rejeitamento de candidaturas

--- a/src/main/resources/templates/candidatures/apply.html
+++ b/src/main/resources/templates/candidatures/apply.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta
-        th:insert="~{/fragments/custom-headfiles :: form-headfiles(title='Candidatar-se - ${offer.principalActivity}')}">
+        th:insert="~{/fragments/custom-headfiles :: form-headfiles(title='Candidatar-se -'+ ${offer.principalActivity})}">
     <link rel="stylesheet" th:href="@{/styles/candidature.css}">
 
 </head>
