--- a/src/main/resources/templates/candidatures/fragments/actions.html
+++ b/src/main/resources/templates/candidatures/fragments/actions.html
@@ -1,22 +1,32 @@
-<div class="d-flex buttons-actions" th:fragment="candidature-actions(candidature)" 
-th:with="showViewButton= ${showViewButton} ?: true">
-    <a class="btn btn-view button-action"
-    th:href="@{/candidature/info/{id}(id=${candidature.id})}"
-    th:if="${showViewButton}"
-    >Visualizar</a> <!--  Empresa ou Aluno ou Coordenador visualiza a candidatura do Aluno  -->
-    
-    <a class="btn btn-success button-action" 
-    th:href="@{/candidature/aprove/{id}(id=${candidature.id})}"
-    th:if="${#authorization.expression('hasRole(''ROLE_COMPANY'')')} ">
-    Aprovar</a> <!--  Empresa aprova a candidatura do Aluno  -->
-    
-    <a class="btn button-action btn-danger" 
-    th:href="@{/candidature/refuse/{id}(id=${candidature.id})}"
-    th:if="${#authorization.expression('hasRole(''ROLE_COMPANY'')')} ">
-    Recusar</a> <!--  Empresa recusa a candidatura do Aluno  -->
-    
-    <a class="btn btn-danger button-action"  
-    th:href="@{/candidature/cancel/{id}(id=${candidature.id})}"
-    th:if="${#authorization.expression('hasRole(''ROLE_STUDENT'')')} "
-    >Cancelar</a> <!-- Aluno Cancela sua candidatura  -->
+<div class="d-flex buttons-actions" th:fragment="candidature-actions(candidature)"
+    th:with="showViewButton= ${showViewButton} ?: true">
+    <a class="btn btn-view button-action" th:href="@{/candidature/info/{id}(id=${candidature.id})}"
+        th:if="${showViewButton}">Visualizar</a>
+    <!--  Empresa ou Aluno ou Coordenador visualiza a candidatura do Aluno  -->
+
+    <a class="btn btn-success button-action" th:href="@{/candidature/aprove/{id}(id=${candidature.id})}"
+        th:if="${#authorization.expression('hasRole(''ROLE_COMPANY'')')} ">
+        Aprovar</a> <!--  Empresa aprova a candidatura do Aluno  -->
+
+        <form 
+        th:action="@{/candidature/reject/{internshipId}/{candidatureId}(candidatureId=${candidature.id}, internshipId=${candidature.internshipOffer.id})}" 
+        method="post"
+        th:if="${#authorization.expression('hasRole(''ROLE_COMPANY'')'  )}">
+
+        <!-- Campo oculto para simular o método DELETE -->
+        <input type="hidden" name="_method" value="DELETE" />
+
+        <!-- Botão de submissão -->
+        <button class="button-action btn-delete" type="submit">
+            Rejeitar
+        </button> <!-- Empresa recusa a candidatura do Aluno -->
+    </form>
+
+
+    <form th:action="@{/candidature/cancel/{candidatureId}(candidatureId=${candidature.id})}" method="post"
+        th:if="${#authorization.expression('hasRole(''ROLE_STUDENT'')')} ">
+        <input type="hidden" name="_method" value="DELETE" />
+        <button class="button-action btn-delete" type="submit" value="">
+            Cancelar</button>
+    </form> <!-- Aluno Cancela sua candidatura  -->
 </div>
