--- a/src/main/resources/templates/students/info.html
+++ b/src/main/resources/templates/students/info.html
@@ -14,7 +14,6 @@
 
     <header th:replace="~{/fragments/header}"></header>
     <main>
-
         <section class="info-section" id="first-info">
             <img th:src="@{/imgs/default/student-boy-default.png}">
             <h1 id="name" th:text="${#strings.capitalize(student.name)}">João Maria Lobo Alves Palhares Costa Palhinha
@@ -89,6 +88,8 @@
                 Total de Candidaturas:
                 <span class="count-number" th:text="${#lists.size(student.candidatureList)}"></span>
             </p>
+            <h1 th:if="${error != null}"th:text="${error}"></h1>
+            <h1 th:if="${success != null}"th:text="${success}"></h1>
 
             <div th:if="${#lists.isEmpty(student.candidatureList)}">
                 <p class="no-content-msg">Não há registros de candidaturas.</p>
