feat: pagination working in offers/list.html

--- a/src/main/resources/templates/fragments/custom-headfiles.html
+++ b/src/main/resources/templates/fragments/custom-headfiles.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" th:href="@{/styles/list.css}">
     <link rel="stylesheet" th:href="@{/styles/fragments/table-global.css}">
     <link rel="stylesheet" th:href="@{/styles/fragments/card-global.css}">
+    <link rel="stylesheet" th:href="@{/styles/pagination.css}">
 </head>
 
 <head th:fragment="form-headfiles(title)">
