--- a/src/main/resources/templates/candidatures/apply.html
+++ b/src/main/resources/templates/candidatures/apply.html
@@ -15,7 +15,7 @@
                 <p th:text="${error}"></p>
             </div>
 
-            <form th:action="@{/candidature/apply}" method="post">
+            <form th:action="@{/candidature/apply/{id}(id=${id})}" method="post">
                 <input type="hidden" name="offerId" th:value="${offer.id}" />
 
                 <div class="form-group">
