--- a/src/main/resources/templates/companies/form.html
+++ b/src/main/resources/templates/companies/form.html
@@ -1,97 +1,117 @@
-<html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/layout/layout}" th:with="title='Home'" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/layout/layout}" th:with="title='Cadastro'" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta th:insert="~{/fragments/custom-headfiles :: register-headfiles(title='Registre-se')}">
+    <meta th:insert="~{/fragments/custom-headfiles :: register-headfiles(title='Cadastrar-se')}">
     <link rel="stylesheet" href="/styles/company/form-company.css">
-    <title>Registre-se</title>
+    <title>Registrar-se</title>
 </head>
 
 <body>
 <main layout:fragment="content">
     <div class="card-main">
-        <div class="main-content">
+        <div class="main-content inter-font-line">
             <h1 class="title-page">Cadastrar-se</h1>
+
             <form th:action="@{/company/save}" method="post" th:object="${company}">
                 <input id="input-id" class="input-form" type="hidden" th:field="*{id}"/>
 
                 <fieldset class="fieldset-info">
                     <legend class="fieldset-legend">Informações Básicas</legend>
-                    <label class="label-form" for="input-username">Nome de usuário *</label>
-                    <input type="text" name="username" id="input-username" class="input-form"
-                           placeholder="Nome de usuário *"
-                           th:field="*{user.username}" required minlength="5" maxlength="20"
-                           title="O nome de usuário deve ter entre 5 e 20 caracteres e conter apenas letras e números."/>
-                    <span th:if="${usernameError}" class="alert alert-danger" th:text="${usernameError}"></span>
 
-                    <label class="label-form" for="input-password">Senha *</label>
-                    <input class="input-form" id="input-password" minlength="8" maxlength="20" name="password"
-                           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                           placeholder="Senha" required th:field="*{user.password}"
-                           title="Senha deve ter pelo menos 8 caracteres, incluir uma letra maiúscula, uma letra minúscula e um número."
-                           type="password"/>
+                    <div class="form-group">
+                        <label class="label-form" for="input-username">Nome de usuário *</label>
+                        <input type="text" name="username" id="input-username" class="input-form"
+                               placeholder="Nome de usuário *"
+                               th:field="*{user.username}" />
+                        <span th:if="${#fields.hasErrors('user.username')}" class="alerta" th:text="${#fields.errors('user.username').getFirst()}"></span>
+                        <span th:if="${usernameError}" class="alerta" th:text="${usernameError}"></span>
+                    </div>
 
-                    <label class="label-form" for="input-password-confirm">Confirme a Senha *</label>
-                    <input id="input-password-confirm" class="input-form" placeholder="Confirme sua senha"
-                           type="password"
-                           required minlength="8"
-                           title="Confirmação da senha deve ter pelo menos 8 caracteres e corresponder à senha fornecida."/>
+                    <div class="form-group">
+                        <label class="label-form" for="input-password">Senha *</label>
+                        <input class="input-form" id="input-password" name="password"
+                               placeholder="Senha" th:field="*{user.password}"
+                               type="password"/>
+                        <span th:if="${#fields.hasErrors('user.password')}" class="alerta" th:text="${#fields.errors('user.password').getFirst()}"></span>
+                    </div>
 
-                    <div id="password-error" class="error-message" style="display: none; color: red;">
-                        As senhas não coincidem. Por favor, verifique.
+                    <div class="form-group">
+                        <label class="label-form" for="input-password-confirm">Confirme a Senha *</label>
+                        <input id="input-password-confirm" class="input-form" placeholder="Confirme sua senha"
+                               type="password"/>
+                        <span id="password-error" class="error-message alerta" style="display: none;">
+                            As senhas não coincidem. Por favor, verifique.
+                        </span>
                     </div>
                 </fieldset>
 
                 <fieldset class="fieldset-info">
                     <legend class="fieldset-legend">Informações da Empresa</legend>
-                    <label class="label-form" for="fantasyNameInput">Nome fantasia *</label>
-                    <input type="text" id="fantasyNameInput" class="input-form" placeholder="Nome fantasia *"
-                           th:field="*{fantasyName}" required maxlength="100"
-                           title="O nome fantasia pode ter no máximo 100 caracteres."/>
-                    <span th:if="${fantasyNameError}" class="alert alert-danger" th:text="${fantasyNameError}"></span>
 
-                    <label class="label-form" for="fantasyNameInput">Principal atividade *</label>
-                    <input type="text" id="principalActivityInput" class="input-form w-100"
-                           placeholder="Principal atividade *" th:field="*{principalActivity}" required maxlength="150"
-                           title="A principal atividade pode ter no máximo 150 caracteres.">
+                    <div class="form-group">
+                        <label class="label-form" for="fantasyNameInput">Nome fantasia *</label>
+                        <input type="text" id="fantasyNameInput" class="input-form" placeholder="Nome fantasia *"
+                               th:field="*{fantasyName}" />
+                        <span th:if="${#fields.hasErrors('fantasyName')}" class="alerta" th:text="${#fields.errors('fantasyName').getFirst()}"></span>
+                        <span th:if="${fantasyNameError}" class="alerta" th:text="${fantasyNameError}"></span>
+                    </div>
 
-                    <label class="label-form" for="fantasyNameInput">Site da empresa *</label>
-                    <input type="url" id="urlPageInput" class="input-form w-100" placeholder="Site da empresa *"
-                           th:field="*{urlPage}" required pattern="https?://.+"
-                           title="Por favor, insira uma URL válida (ex: http://www.exemplo.com).">
+                    <div class="form-group">
+                        <label class="label-form" for="principalActivityInput">Principal atividade *</label>
+                        <input type="text" id="principalActivityInput" class="input-form w-100"
+                               placeholder="Principal atividade *" th:field="*{principalActivity}" />
+                        <span th:if="${#fields.hasErrors('principalActivity')}" class="alerta" th:text="${#fields.errors('principalActivity').getFirst()}"></span>
+                    </div>
 
-                    <label class="label-form" for="cnpjInput">CNPJ *</label>
-                    <input type="text" id="cnpjInput" class="input-form" placeholder="CNPJ *" th:field="*{cnpj}"
-                           required pattern="\d{14}"
-                           title="CNPJ deve ter 14 dígitos."/>
-                    <span th:if="${cnpjError}" class="alert alert-danger" th:text="${cnpjError}"></span>
+                    <div class="form-group">
+                        <label class="label-form" for="urlPageInput">Site da empresa *</label>
+                        <input type="url" id="urlPageInput" class="input-form w-100" placeholder="Site da empresa *"
+                               th:field="*{urlPage}" />
+                        <span th:if="${#fields.hasErrors('urlPage')}" class="alerta" th:text="${#fields.errors('urlPage').getFirst()}"></span>
+                    </div>
 
-                    <label class="label-form" for="companyEmailInput">E-mail da Empresa *</label>
-                    <input type="email" id="companyEmailInput" class="input-form" placeholder="E-mail da Empresa *"
-                           th:field="*{user.email}" required
-                           title="Por favor, insira um endereço de email válido."/>
-                    <span th:if="${emailError}" class="alert alert-danger" th:text="${emailError}"></span>
+                    <div class="form-group">
+                        <label class="label-form" for="cnpjInput">CNPJ *</label>
+                        <input type="text" id="cnpjInput" class="input-form" placeholder="CNPJ *" th:field="*{cnpj}" />
+                        <span th:if="${#fields.hasErrors('cnpj')}" class="alerta" th:text="${#fields.errors('cnpj').getFirst()}"></span>
+                        <span th:if="${cnpjError}" class="alerta" th:text="${cnpjError}"></span>
+                    </div>
 
-                    <label class="label-form" for="companyPhoneInput">Telefone da Empresa *</label>
-                    <input type="tel" id="companyPhoneInput" class="input-form" placeholder="Telefone da Empresa *"
-                           th:field="*{phoneNumber}" required pattern="\d{10,11}"
-                           title="Por favor, insira um número de telefone válido com 10 ou 11 dígitos."/>
+                    <div class="form-group">
+                        <label class="label-form" for="companyEmailInput">E-mail da Empresa *</label>
+                        <input type="email" id="companyEmailInput" class="input-form" placeholder="E-mail da Empresa *"
+                               th:field="*{user.email}" />
+                        <span th:if="${#fields.hasErrors('user.email')}" class="alerta" th:text="${#fields.errors('user.email').getFirst()}"></span>
+                        <span th:if="${emailError}" class="alerta" th:text="${emailError}"></span>
+                    </div>
 
-                    <label class="label-form" for="fantasyNameInput">Pessoa do contato *</label>
-                    <input type="text" id="personContactInput" class="input-form w-100"
-                           placeholder="Nome do responsável" th:field="*{personContact}" required maxlength="100"
-                           title="O nome do responsável pode ter no máximo 100 caracteres.">
+                    <div class="form-group">
+                        <label class="label-form" for="companyPhoneInput">Telefone da Empresa *</label>
+                        <input type="tel" id="companyPhoneInput" class="input-form" placeholder="Telefone da Empresa *"
+                               th:field="*{phoneNumber}" />
+                        <span th:if="${#fields.hasErrors('phoneNumber')}" class="alerta" th:text="${#fields.errors('phoneNumber').getFirst()}"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="label-form" for="personContactInput">Pessoa do contato *</label>
+                        <input type="text" id="personContactInput" class="input-form w-100"
+                               placeholder="Nome do responsável" th:field="*{personContact}" />
+                        <span th:if="${#fields.hasErrors('personContact')}" class="alerta" th:text="${#fields.errors('personContact').getFirst()}"></span>
+                    </div>
                 </fieldset>
 
                 <fieldset class="fieldset-info">
                     <legend class="fieldset-legend">Endereço</legend>
-                    <input type="text" id="addressInput" class="input-form" placeholder="Endereço *"
-                           th:field="*{address}" required maxlength="200"
-                           title="O endereço pode ter no máximo 200 caracteres."/>
+                    <div class="form-group">
+                        <label for="addressInput"></label><input type="text" id="addressInput" class="input-form" placeholder="Endereço *"
+                                                                 th:field="*{address}" />
+                        <span th:if="${#fields.hasErrors('address')}" class="alerta" th:text="${#fields.errors('address').getFirst()}"></span>
+                    </div>
 
                     <div class="file-upload">
                         <label for="addressVerify">Adicionar Comprovante (PDF)</label>
-                        <input type="file" id="addressVerify" name="file" accept="application/pdf" class="file-input" th:field="*{addressProof}" required/>
+                        <input type="file" id="addressVerify" name="file" accept="application/pdf" class="file-input" th:field="*{addressProof}" />
                     </div>
                 </fieldset>
 
@@ -103,5 +123,4 @@
     </div>
 </main>
 </body>
-
 </html>
