--- a/src/main/resources/templates/students/form.html
+++ b/src/main/resources/templates/students/form.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/layout/layout}" th:with="title='Home'" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/layout/layout}" th:with="title='Cadastro'" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,70 +11,75 @@
     <div class="card-main">
         <div class="main-content inter-font-line">
             <h1 class="title-page">Cadastrar-se</h1>
+
             <form th:action="@{/student/save}" method="post" th:object="${student}">
                 <input id="input-id" class="input-form" type="hidden" th:field="*{id}"/>
 
                 <fieldset class="fieldset-info">
                     <legend class="fieldset-legend">Informações Pessoais</legend>
 
-                    <label class="label-form" for="input-name">Nome *</label>
-                    <input class="input-form" id="input-name" maxlength="100" placeholder="Seu nome completo" required
-                           th:field="*{name}" title="Nome completo é obrigatório e deve ter no máximo 100 caracteres."
-                           type="text"/>
+                    <div class="form-group">
+                        <label class="label-form" for="input-name">Nome *</label>
+                        <input class="input-form" id="input-name" placeholder="Seu nome completo" th:field="*{name}" type="text"/>
+                        <span th:if="${#fields.hasErrors('name')}" class="alerta" th:text="${#fields.errors('name').getFirst()}"></span>
+                    </div>
 
-                    <label class="label-form" for="input-enrollment">Matrícula *</label>
-                    <input id="input-enrollment" name="enrollment" class="input-form" placeholder="Sua matrícula"
-                           type="text" th:field="*{enrollment}" required pattern="\d{11}"
-                           title="Matrícula deve ter 11 dígitos."/>
-                    <span th:if="${enrollmentError}" class="alert alert-danger" th:text="${enrollmentError}"></span>
+                    <div class="form-group">
+                        <label class="label-form" for="input-enrollment">Matrícula *</label>
+                        <input id="input-enrollment" name="enrollment" class="input-form" placeholder="Sua matrícula" type="text" th:field="*{enrollment}"/>
+                        <span th:if="${#fields.hasErrors('enrollment')}" class="alerta"  th:text="${#fields.errors('enrollment').getFirst()}"></span>
+                        <span th:if="${enrollmentError}" th:text="${enrollmentError}"></span>
+                    </div>
 
-                    <label class="label-form" for="input-course">Curso *</label>
-                    <input id="input-course" placeholder="Nome do curso" class="input-form" type="text" th:field="*{course}"
-                           required maxlength="100"
-                           title="O nome do curso é obrigatório e deve ter no máximo 100 caracteres."/>
+                    <div class="form-group">
+                        <label class="label-form" for="input-course">Curso *</label>
+                        <input id="input-course" placeholder="Nome do curso" class="input-form" type="text" th:field="*{course}"/>
+                        <span th:if="${#fields.hasErrors('course')}" class="alerta" th:text="${#fields.errors('course').getFirst()}"></span>
+                    </div>
 
-                    <label class="label-form" for="input-birthdate">Data de Nascimento *</label>
-                    <input id="input-birthdate" class="input-form" placeholder="Data de nascimento (DD/MM/AAAA)" type="date"
-                           th:field="*{birthdate}" required
-                           title="Por favor, insira uma data válida no formato DD/MM/AAAA."/>
+                    <div class="form-group">
+                        <label class="label-form" for="birthdate">Data de Nascimento *</label>
+                        <input class="input-form" type="date" id="birthdate" th:field="*{birthdate}"/>
+                        <span th:if="${#fields.hasErrors('birthdate')}" class="alerta" th:text="${#fields.errors('birthdate').getFirst()}"></span>
+                        <span th:if="${birthdateError}"  th:text="${birthdateError}"></span>
+                    </div>
 
-                    <label class="label-form" for="phoneNumberInput">Telefone *</label>
-                    <input type="tel" id="phoneNumberInput" class="input-form" placeholder="Telefone"
-                           th:field="*{phoneNumber}" required pattern="\d{10,11}"
-                           title="Por favor, insira um número de telefone válido com 10 ou 11 dígitos."/>
+                    <div class="form-group">
+                        <label class="label-form" for="phoneNumberInput">Telefone *</label>
+                        <input type="tel" id="phoneNumberInput" class="input-form" placeholder="Telefone" th:field="*{phoneNumber}"/>
+                        <span th:if="${#fields.hasErrors('phoneNumber')}" class="alerta" th:text="${#fields.errors('phoneNumber').getFirst()}"></span>
+                    </div>
 
-                    <label class="label-form" for="input-username">Nome de Usuário *</label>
-                    <input id="input-username" name="username" class="input-form" placeholder="Nome de usuário" type="text"
-                           th:field="*{user.username}" required minlength="5" maxlength="20"
-                           pattern="[a-zA-Z0-9]+"
-                           title="Nome de usuário deve ter entre 5 e 20 caracteres e conter apenas letras e números."/>
-                    <span th:if="${usernameError}" class="alert alert-danger" th:text="${usernameError}"></span>
+                    <div class="form-group">
+                        <label class="label-form" for="input-username">Nome de Usuário *</label>
+                        <input id="input-username" name="username" class="input-form" placeholder="Nome de usuário" type="text" th:field="*{user.username}"/>
+                        <span th:if="${#fields.hasErrors('user.username')}" class="alerta" th:text="${#fields.errors('user.username').getFirst()}"></span>
+                        <span th:if="${usernameError}" th:text="${usernameError}"></span>
+                    </div>
 
-                    <label class="label-form" for="input-email">Email *</label>
-                    <input id="input-email" class="input-form" placeholder="Seu email" type="email" th:field="*{user.email}"
-                           required
-                           title="Por favor, insira um endereço de email válido."/>
-                    <span th:if="${emailError}" class="alert alert-danger" th:text="${emailError}"></span>
+                    <div class="form-group">
+                        <label class="label-form" for="input-email">Email *</label>
+                        <input id="input-email" class="input-form" placeholder="Seu email" type="email" th:field="*{user.email}"/>
+                        <span th:if="${#fields.hasErrors('user.email')}" class="alerta" th:text="${#fields.errors('user.email').getFirst()}"></span>
+                        <span th:if="${emailError}" th:text="${emailError}"></span>
+                    </div>
 
-                    <label class="label-form" for="input-password">Senha *</label>
-                    <input class="input-form" id="input-password" minlength="8" maxlength="20" name="password"
-                           pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                           placeholder="Senha" required th:field="*{user.password}"
-                           title="Senha deve ter pelo menos 8 caracteres, incluir uma letra maiúscula, uma letra minúscula e um número."
-                           type="password"/>
+                    <div class="form-group">
+                        <label class="label-form" for="input-password">Senha *</label>
+                        <input class="input-form" id="input-password" name="password" placeholder="Senha" th:field="*{user.password}" type="password"/>
+                        <span th:if="${#fields.hasErrors('user.password')}" class="alerta" th:text="${#fields.errors('user.password').getFirst()}"></span>
+                    </div>
 
-                    <label class="label-form" for="input-password-confirm">Confirme a Senha *</label>
-                    <input id="input-password-confirm" class="input-form" placeholder="Confirme sua senha" type="password"
-                           required minlength="8"
-                           title="Confirmação da senha deve ter pelo menos 8 caracteres e corresponder à senha fornecida."/>
-
-                    <div id="password-error" class="error-message" style="display: none; color: red;">
-                        As senhas não coincidem. Por favor, verifique.
+                    <div class="form-group">
+                        <label class="label-form" for="input-password-confirm">Confirme a Senha *</label>
+                        <input id="input-password-confirm" class="input-form" placeholder="Confirme sua senha" type="password"/>
+                        <span id="password-error" class="error-message" style="display: none; color: red;">
+                            As senhas não coincidem. Por favor, verifique.
+                        </span>
                     </div>
                 </fieldset>
 
                 <fieldset class="fieldset-info">
-                    
                     <legend class="fieldset-legend">Suas Competências</legend>
                     <div class="d-flex flex-wrap align-items-center justify-content-center">
                         <label class="checkBox-box" th:each="competence : ${competences}">
@@ -93,5 +98,4 @@
     </div>
 </main>
 </body>
-
 </html>
